# Mobile_Robot_PI5

./: .gitignore  README.md  all_transformations.py  mensabot_all.launch.py  start_protokoll.txt
docs/source/: conf.py  overview.rst
setup/: ros2_setup.sh  ros2_setup_Jetson.sh
sphinx_documentation/: pyvenv.cfg
src/camera_publisher/: CMakeLists.txt  package.xml  setup.py
src/camera_publisher/camera_publisher/: camera_pub.py  shm_writer_test.py
src/camera_publisher/msg/: PersonMarker.msg
src/camera_publisher/python/: camera_pub.py  shm_writer_test.py
src/launch/: display_robot.launch.py  frames_2025-10-14_16.03.16.gv
src/marker_visualization/: package.xml  setup.cfg  setup.py
src/marker_visualization/marker_visualization/: marker_visualization (Kopie).py  marker_visualization.py
src/mensabot_bringup/: CMakeLists.txt  package.xml
src/mensabot_bringup/config/: controller_manager.yaml  mensabot_base_controller (Kopie).yaml  mensabot_base_controller Mit Getriebe.yaml  mensabot_base_controller.yaml  motor_slave_config (Kopie).yaml
src/mensabot_bringup/launch/: mensabot.launch.py  mensabot_launch.py
src/mensabot_description/: CMakeLists.txt  package.xml
src/mensabot_description/launch/: view_mensabot.launch.py  view_mensabot_launch.py
src/mensabot_description/rviz/: model.rviz  robot.rviz
src/my_robot_visual/: package.xml  setup.cfg  setup.py
src/odom_logger/: package.xml  setup.py
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_msgs/msg/: Persons.msg
src/transformations/: package.xml  setup.py
(+7 files in other folders)
